syntax = "proto3";

option go_package = "github.com/XWS-Dislinkt-Developers/Dislinkt-backend/common/job_service";

package job_service;

import "google/protobuf/timestamp.proto";
import "google/api/annotations.proto";

service JobService {
  rpc GetAll(GetAllRequest) returns(GetAllResponse) {
    option (google.api.http) = {
      get: "/userData"
    };
  };
}

message GetAllRequest {
}

message GetAllResponse {
  repeated UserData userData = 1;
}

message UserData {
  int64 id = 1;
  int64 userId = 2;
  string token = 3;
}
